--- a/instagram-app/src/components/CommentSection.css
+++ b/instagram-app/src/components/CommentSection.css
@@ -1,5 +1,10 @@
 .comment-section {
     display: flex;
+    flex-direction: column;
+}
+
+.comment {
+    padding: 5px;
 }
 
 .comment-user-name {
@@ -9,4 +14,20 @@
 
 .comment-content {
     list-style-type: none;
+}
+
+.timestamp {
+    color: silver;
+    padding: 10px;
+}
+
+.add-comment {
+    width: 100%;
+    height: 75px;
+    border: none;
+}
+
+hr {
+    color: silver;
+    width: 100%;
 }
